# MovingAverage

./: .gitignore  CMakeLists.txt  LICENSE.txt  MovingAverage.hpp  README.md
MovingAverageFilters/: DoubleExponentialSmoothing.hpp  MovingAverage.hpp  SMA.hpp  SimpleExponentialSmoothing.hpp  SimpleMovingAverage.hpp  SimpleMovingMedian.hpp  TemporalSmoother.hpp  Traits.hpp
SignalWrappers/: EigenWrapper.hpp  SequenceContainerWrapper.hpp
Test/: MovingAverageTest.hpp  NoisySinusoid.hpp  TemporalSmootherTest.hpp  gnuplot_i.hpp  main.cpp
